--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ quick-xml = { version = "*", features = ["serialize"] }
 rand = "0.9.0"
 
 # Sentence embedding
-rust-bert = "0.23.0"
+rust-bert = "*"
 
 # annoy(Approximate Nearest Neighbors Oh Yeah)
 rannoy = { git = "https://github.com/uzushino/rs-annoy" }
